--- a/index.html
+++ b/index.html
@@ -7,10 +7,25 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>AI Image Classification</h1>
-    <button type="button" onclick="init()">Start Camera</button>
-    <div id="webcam-container"></div>
-    <div id="label-container"></div>
+    <div class="container">
+        <h1>AI Image Classification</h1>
+
+        <div class="input-options">
+            <button id="startCameraBtn" onclick="initWebcam()">Start Camera</button>
+            <input type="file" id="imageUpload" accept="image/*" onchange="handleImageUpload(event)">
+            <label for="imageUpload" class="custom-file-upload">Choose File</label>
+        </div>
+
+        <div class="main-content">
+            <div class="webcam-section">
+                <div id="webcam-container"></div>
+                <canvas id="uploadedImageCanvas" style="display: none;"></canvas>
+            </div>
+            <div class="results-section">
+                <div id="label-container"></div>
+            </div>
+        </div>
+    </div>
 
     <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@latest/dist/tf.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@teachablemachine/image@latest/dist/teachablemachine-image.min.js"></script>
