--- a/index.html
+++ b/index.html
@@ -27,6 +27,10 @@
         </div>
     </div>
 
+    <footer style="text-align: center; margin-top: 20px; color: #888;">
+    <p>Developed by Arfah, Camelia, Haziqah, Syamimi | BITI1113 AI Project</p>
+    </footer>
+
     <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@latest/dist/tf.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@teachablemachine/image@latest/dist/teachablemachine-image.min.js"></script>
     <script src="script.js"></script>
