--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
             <h1 class="neon-text">AI Image Classification</h1>
 
             <div class="input-options">
-                <button id="startCameraBtn" class="neon-btn" onclick="initWebcam()">Start Camera</button>
+                <button id="startCameraBtn" onclick="initWebcam()">Start Camera</button>
                 <input type="file" id="imageUpload" accept="image/*" onchange="handleImageUpload(event)">
-                <label for="imageUpload" class="neon-btn secondary">Choose File</label>
+                <label for="imageUpload" class="custom-file-upload">Choose File</label>
             </div>
 
             <div class="main-content">
