--- a/index.html
+++ b/index.html
@@ -3,43 +3,46 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>BITI1113 AI Mask Detection</title>
+    <title>Face Accessory Detection System</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="bg-animation"></div>
 
-    <div class="wrapper">
-        <div class="container">
-            <h1 class="neon-text">Real-Time AI Mask Detection System</h1>
+<div class="bg-animation"></div>
 
-            <div class="input-options">
-                <button id="startCameraBtn" onclick="initWebcam()">Start Camera</button>
-                <input type="file" id="imageUpload" accept="image/*" onchange="handleImageUpload(event)">
-                <label for="imageUpload" class="custom-file-upload">Choose File</label>
-            </div>
+<div class="wrapper">
+    <div class="container">
 
-            <div class="main-content">
-                <div class="webcam-section card-glow">
-                    <div class="card-header">Input Image</div>
-                    <div id="webcam-container"></div>
-                    <canvas id="uploadedImageCanvas" style="display: none;"></canvas>
-                </div>
-                
-                <div class="results-section card-glow">
-                    <div class="card-header">Detection Results</div>
-                    <div id="label-container"></div>
-                </div>
-            </div>
+        <!-- 🔹 TITLE KEKAL -->
+        <h1 class="neon-text">Face Accessory Detection System</h1>
+        <p class="subheading">
+            Real-Time AI Detection for Mask, Glasses, Hat & No Accessories
+        </p>
+
+        <!-- 🔹 BUTTON KEKAL (JANGAN BUANG) -->
+        <div class="input-options">
+            <button id="startCameraBtn" onclick="initWebcam()">Start Camera</button>
+
+            <input type="file" id="imageUpload" accept="image/*" onchange="handleImageUpload(event)">
+            <label for="imageUpload" class="upload-label">Choose File</label>
         </div>
 
-        <footer class="footer">
-            <p>Developed by <span class="names">Arfah, Camelia, Haziqah, Syamimi</span> | BITI1113 AI Project &copy; 2025</p>
-        </footer>
-    </div>
+        <!-- 🔹 RESULT KEKAL -->
+        <div class="prediction">
+            <h2>Prediction</h2>
+            <p id="result">-</p>
+        </div>
 
-    <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@latest/dist/tf.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@teachablemachine/image@latest/dist/teachablemachine-image.min.js"></script>
-    <script src="script.js"></script>
+        <!-- 🔹 CAMERA DISPLAY KEKAL -->
+        <video id="webcam" autoplay playsinline width="400" height="300"></video>
+        <canvas id="canvas" width="400" height="300" hidden></canvas>
+
+    </div>
+</div>
+
+<script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@4.2.0/dist/tf.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/@teachablemachine/image@0.8/dist/teachablemachine-image.min.js"></script>
+<script src="script.js"></script>
+
 </body>
 </html>
